environments/eks/manifests/05-redis.yaml
---
# Redis ExternalName Service (ElastiCache)
# ElastiCache Redis 클러스터를 Kubernetes Service로 노출
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: fans
spec:
  type: ExternalName
  externalName: fans-cluster-redis.1wbeqm.ng.0001.apn2.cache.amazonaws.com
  ports:
  - port: 6379
    targetPort: 6379
